@@ -1,5 +1,8 @@
 This file documents the revision history for mod_gearman.
 
+next:
+          - close open filehandles before running check
+
 1.4.4 Thu May  3 15:48:34 CEST 2013
           - added 'route_eventhandler_like_checks' option
           - fixed leaking FDs on reloading neb
